--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-matplotlib
-requests
-seaborn
-pandas
-numpy
-tqdm
-nltk
+matplotlib==3.2.1
+requests==2.23.0
+seaborn==0.10.0
+pandas==1.0.3
+numpy==1.18.2
+tqdm==4.45.0
+nltk==3.4.5
+pre-commit
+
