--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,11 @@
 {
   "options": {
-    "text": "FPGA",
+    "text": "Data Scientist",
     "area": 1,
     "per_page": 50
   },
   "refresh": false,
-  "max_workers": 5,
-  "save_result": false
+  "max_workers": 7,
+  "save_result": false,
+  "exchanges": ["RUB", "USD", "EUR", "UAH"]
 }
