--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,14 @@
 exclude: '^$'
 fail_fast: false
 default_language_version:
-  python: python3.7
+  python: python3.8
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.5.0
     hooks:
+      - id: check-added-large-files
       # - id: check-docstring-first
+      - id: check-case-conflict
       - id: check-merge-conflict
       - id: check-yaml
       - id: trailing-whitespace
