--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ matplotlib==3.2.1
 nltk==3.4.5
 numpy==1.18.2
 pandas==1.0.3
-pre-commit
+pre-commit==2.8.2
 requests==2.23.0
 seaborn==0.10.0
 tqdm==4.45.0
