Update some logic. TODO: fix-up predictor.py

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+*/.ipynb_checkpoints/*
 
 # pyenv
 .python-version
@@ -107,6 +108,5 @@ venv.bak/
 .mypy_cache/
 
 *.csv
-src/id_list.dat
 src/cache/**/*
 !src/cache/.gitkeep
