--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+jupyter==1.0.0
 matplotlib==3.2.1
 nltk==3.4.5
 numpy==1.18.2
 pandas==1.0.3
 pre-commit==2.8.2
 requests==2.23.0
+scikit-learn==0.23.2
+scikit_learn==0.23.2
+scipy==1.5.3
 seaborn==0.10.0
 tqdm==4.45.0
