--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 exclude: '^$'
 fail_fast: false
 default_language_version:
-  python: python3.8
+  python: python3.9
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+    rev: v4.3.0
     hooks:
       - id: check-added-large-files
       # - id: check-docstring-first
@@ -15,8 +15,8 @@ repos:
       - id: end-of-file-fixer
       - id: requirements-txt-fixer
 
-  - repo: https://github.com/humitos/mirrors-autoflake.git
-    rev: v1.3
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v1.4
     hooks:
       - id: autoflake
         args: ['-r', '--in-place',
@@ -27,18 +27,22 @@ repos:
               ]
 
   - repo: https://github.com/asottile/seed-isort-config
-    rev: v2.1.0
+    rev: v2.2.0
     hooks:
       - id: seed-isort-config
         args: ['--application-directories=src']
 
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.21
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.10.1
     hooks:
       - id: isort
-        args: ['-y']
+        args:
+          - "--profile=black"
 
   - repo: https://github.com/ambv/black
-    rev: stable
+    rev: 22.6.0
     hooks:
       - id: black
+        language_version: python3
+        args:
+          - "--line-length=120"
