--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,8 @@
   "options": {
     "text": "Data Scientist",
     "area": 1,
-    "per_page": 50
+    "per_page": 50,
+    "professional_roles": [96, 10]
   },
   "refresh": false,
   "max_workers": 7,
